# python-zero-code-demo

./: .dockerignore  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  app.py  deploy.sh  docker-compose.yml  ecs-task-definition.json  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  docs.yml  scorecard.yml
api/: index.html
cicd/: index.html
deployment/: index.html
docs/: api.md  cicd.md  deployment.md  getting-started.md  index.md  supply-chain.md
getting-started/: index.html
search/: search_index.json
supply-chain/: index.html
tests/: conftest.py  test_app.py
