[project]
name = "inventory-service"
version = "0.10.0"

# ── Semantic Release ────────────────────────────────────────────────────────
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
build_command = ""                  # not a PyPI package — skip build step

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# ── Black ───────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312"]

# ── Pylint ──────────────────────────────────────────────────────────────────
[tool.pylint.main]
py-version = "3.12"

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
# Disable categories already covered by ruff (E/F/I/UP/B/SIM)
disable = [
  "C0114", "C0115", "C0116",  # missing docstrings
  "C0301",                     # line-too-long (enforced by black/ruff)
  "W0611",                     # unused-import (ruff F401)
  "E0401",                     # import-error (mypy handles this)
]

# ── Bandit ──────────────────────────────────────────────────────────────────
[tool.bandit]
severity = "medium"   # ignore low-severity findings
confidence = "medium" # ignore low-confidence findings

# ── MyPy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
